--- a/index.html
+++ b/index.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="Style.css" />
-  </head>
-  <body>
-    <h1>Hello World!</h1>
-    <div><img src="img_hello_world.jpg" alt="Hello World from Space" /></div>
-    <p>This is a simple HTML document.</p>
-    <p>This is a new lines</p>
-    <div>
-      <img
-        src="img_hello_git.jpg"
-        alt="Hello Git"
-        style="width: 100%; max-width: 640px"
-      />
-    </div>
-    <div><h2>Hey Yow Github</h2></div>
-  </body>
+<html>
+<head>
+<title>Hello World!</title>
+<link rel="stylesheet" href="bluestyle.css">
+</head>
+<body>
+
+<h1>Hello world!</h1>
+<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
+<p>This is the first file in my new Git Repo.</p>
+<p>This line is here to show how merging works.</p>
+<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
+</body>
 </html>
