--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Hello World!</title>
-<link rel="stylesheet" href="bluestyle.css">
+<link rel="stylesheet" href="Style.css">
 </head>
 <body>
 
@@ -11,8 +11,8 @@
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
 <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px">
-  <button id="btn">click me</button>
 </div>
+<button class = "btn">click me</button>
 
 
 </body>
